--- a/views/index.pug
+++ b/views/index.pug
@@ -6,8 +6,9 @@ html(lang="en")
     link(rel="stylesheet" type="text/css" href="/styles/styles.css")
   body
     div(class="mainContent")
-      div(class="topBar")
+      div(class="hrDot")
         hr(class="dotted")
+      div(class="topBar")
         div(class="headerDiv")
           h1(class="header1") _ARCHITEKT
         div(class="headerPDiv")
