--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -9,35 +9,6 @@ $large: "(min-width: 900px)";
 
 $arial-font: Arial, Helvetica, sans-serif;
 
-// @mixin small{
-//   @media #{$small} {
-//     body{
-//       .headerDiv{
-//         font-family: $arial-font;
-//         font-size: 50px;
-//         font-weight: bold;
-//       }
-//       .headerPDiv{
-//         display: none;
-//       }
-//     }
-//   }
-//     // @content;
-// }
-
-// @mixin medium{
-//   @media #{$medium} {
-//     // @content;
-//   }
-// }
-
-// @mixin large{
-//   @media #{$large} {
-
-//     // @content;
-//   }
-// }
-
 @media #{$small}{
   body{
     .topBar{
@@ -47,8 +18,6 @@ $arial-font: Arial, Helvetica, sans-serif;
       display: none;
     }
     hr.line {
-      // justify-content: center;
-      // align-items: center;
       border: 0;
       border-bottom: 1px #ccc;
       background: #999;
@@ -68,12 +37,6 @@ $arial-font: Arial, Helvetica, sans-serif;
       align-items: center;
     }
     .row2{
-      // display: flex;
-      // flex-flow: row wrap;
-      // margin-left: auto;
-      // margin-right: auto;
-      // justify-content: center;
-      // align-items: center;
       margin-left: 35px;
       margin: 25px;
     }
@@ -83,41 +46,26 @@ $arial-font: Arial, Helvetica, sans-serif;
       margin-left: auto;
       margin-right: auto;
       max-width: 300px;
-      // position: relative;
     }
     img.uploadedImg{
       max-height: 90%;
       max-width: 90%;
-      // position: relative;
-      // z-index: 1;
     }
     .picPara{
       font-size: 14px;
       text-align: left;
       width: 300px;
-      // margin-left: 16px;
-      // p.authorP{
-      //   display: block;
-      //   position: absolute;
-      //   z-index: 2;
-      //   top: 80%;
-      //   right: 12%;
-      //   color: white;
-      // }
     }
     .titleDiv{
       box-sizing: border-box;
       margin-bottom: 12px;
       padding: 5px;
     }
-    .imgContent{
-      // margin-left: 50px;
-      .descriptDiv{
+    .descriptDiv{
         box-sizing: border-box;
         padding: 5px;
         margin-top: 20px;
         font-size: 12px;
-      }
     }
   }
 }
@@ -141,21 +89,16 @@ $arial-font: Arial, Helvetica, sans-serif;
         width: 100%;
         margin-bottom: 80px;
       }
-      // .topBar > div{
-      //   flex: 1 0 50%;
-      // }
-      // .topBar > .div:first-child{
-      //   flex: 0 1 100%;
-      // }
       .headerDiv {
         font-size: 50px;
         font-weight: bold;
         margin-left: 10%;
         margin-right: 10px;
+        width: 50%;
       }
       .headerPDiv{
         font-size: 12px;
-        width: 350px;
+        width: 50%;
         margin-right: 10%;
         padding-left: 10px;
         border-left: 1px grey;
@@ -177,8 +120,6 @@ $arial-font: Arial, Helvetica, sans-serif;
         margin-right: auto
       }
       hr.line {
-      // justify-content: center;
-      // align-items: center;
       width: 100%;
       border: 0;
       border-bottom: 1px #ccc;
@@ -192,26 +133,16 @@ $arial-font: Arial, Helvetica, sans-serif;
         width: 100%;
         margin-bottom: 80px;
       }
-      // .topBar{
-      //   display: flex;
-      //   width: 100%;
-      //   margin-bottom: 80px;
-      // }
-      // .topBar > div {
-      //   flex: 1 0 50%;
-      // }
-      // .topBar > div:first-child{
-      //   flex: 1 0 100%;
-      // }
       .headerDiv {
         font-size: 50px;
         font-weight: bold;
         margin-left: 10%;
         margin-right: 10px;
+        width: 50%;
       }
       .headerPDiv{
         font-size: 12px;
-        width: 350px;
+        width: 50%;
         margin-right: 10%;
         padding-left: 10px;
         border-left: 1px grey;
@@ -229,27 +160,10 @@ $arial-font: Arial, Helvetica, sans-serif;
         box-sizing: border-box;
         max-height: 90%;
         max-width: 300px;
-        margin: 20px;
       }
       .picPara{
         max-width: 400px;
-        // max-width: 300px;
       }
-// <<<<<<< HEAD
-        // margin: 10px;
-        // display: flex;
-        // flex-flow: row wrap;
-        // flex-basis: 15%;
-        // flex-grow: 1;
-
-        // .uploadedImg{
-        //   max-height: 200px;
-        //   max-width: 200px;
-        // }
-// =======
-// >>>>>>> parent of 2b98f2f... desktop view scss 3 per row
-
-
   }
 }
 
