--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,5 +1,5 @@
-@import "sass/clearfix";
-@import "sass/reset";
+@import "sass/partials/clearfix";
+@import "sass/partials/reset";
 
 $dark-color : #000000;
 
@@ -54,13 +54,29 @@ $arial-font: Arial, Helvetica, sans-serif;
       max-width: 300px;
     }
     img.uploadedImg{
-      max-height: 90%;
-      max-width: 90%;
+      max-height: 100%;
+      max-width: 100%;
+    }
+    .picHolder{
+      position: relative;
+      display: block;
+      height: 300px;
+      width: 285px;
     }
     .picPara{
+      display: block;
       font-size: 14px;
       text-align: left;
       width: 300px;
+    }
+    .authorP{
+      color: white;
+      text-align: right;
+      position: absolute;
+      display: block;
+      width: 100%;
+      margin-top: -20px;
+      z-index: 2;
     }
     .titleDiv{
       box-sizing: border-box;
@@ -68,10 +84,10 @@ $arial-font: Arial, Helvetica, sans-serif;
       padding: 5px;
     }
     .descriptDiv{
-        box-sizing: border-box;
-        padding: 5px;
-        margin-top: 20px;
-        font-size: 12px;
+      box-sizing: border-box;
+      padding: 5px;
+      margin-top: 20px;
+      font-size: 12px;
     }
   }
 }
