--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -65,6 +65,11 @@ table {
   border-spacing: 0; }
 
 @media (min-width: 100px) and (max-width: 600px) {
+  body .loginButton {
+    margin-top: 10px;
+    margin-right: 20px;
+    display: flex;
+    justify-content: flex-end; }
   body .topBar {
     margin-bottom: 40px; }
   body hr.dotted {
@@ -94,12 +99,26 @@ table {
     margin-right: auto;
     max-width: 300px; }
   body img.uploadedImg {
-    max-height: 90%;
-    max-width: 90%; }
+    max-height: 100%;
+    max-width: 100%; }
+  body .picHolder {
+    position: relative;
+    display: block;
+    height: 300px;
+    width: 285px; }
   body .picPara {
+    display: block;
     font-size: 14px;
     text-align: left;
     width: 300px; }
+  body .authorP {
+    color: white;
+    text-align: right;
+    position: absolute;
+    display: block;
+    width: 100%;
+    margin-top: -20px;
+    z-index: 2; }
   body .titleDiv {
     box-sizing: border-box;
     margin-bottom: 12px;
