--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -62,6 +62,7 @@ $arial-font: Arial, Helvetica, sans-serif;
       display: block;
       height: 300px;
       width: 285px;
+      margin-left: 2%;
     }
     .picPara{
       display: block;
