--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -65,7 +65,7 @@ table {
   border-spacing: 0; }
 
 @media (min-width: 100px) and (max-width: 600px) {
-  body .loginButton {
+  body .buttons {
     margin-top: 10px;
     margin-right: 20px;
     display: flex;
@@ -111,10 +111,13 @@ table {
     display: block;
     font-size: 14px;
     text-align: left;
-    width: 300px; }
+    width: 300px;
+    word-wrap: break-word; }
   body .authorP {
     color: white;
     text-align: right;
+    background-color: #2e3333;
+    opacity: 0.5;
     position: absolute;
     display: block;
     width: 100%;
