--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -172,11 +172,12 @@ table {
     display: flex;
     flex-flow: row;
     width: 100%;
-    margin-bottom: 80px; }
+    margin-bottom: 80px;
+    justify-content: center; }
   body .headerDiv {
     font-size: 50px;
     font-weight: bold;
-    margin-left: 1%; }
+    margin-left: 10%; }
   body .header1 {
     font-size: 62px;
     width: 425px; }
