--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -146,11 +146,13 @@ $arial-font: Arial, Helvetica, sans-serif;
         flex-flow: row;
         width: 100%;
         margin-bottom: 80px;
+        justify-content: center;
+
       }
       .headerDiv {
         font-size: 50px;
         font-weight: bold;
-        margin-left: 1%;
+        margin-left: 10%;
         // margin-right: 10px;
         // width: 50%;
       }
